add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <h1>hi</h1>
+    <header>header</header>
+    <section>
+        Main image
+    </section>
+    <section>
+        services and amenities
+    </section>
+    <section>
+        school days and times
+    </section>
+
+    <footer>social media</footer>
 </body>
 </html>
