--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <header>header</header>
+    <header>
+        <a href="index.html">
+            <h1>Playdays Preschool</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">About Us</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main image
     </section>
