--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <header>
+    <header id="navbar">
         <a href="index.html">
             <h1>Playdays Preschool</h1>
         </a>
         <nav>
-            <ul>
-                <li>
+            <ul id="menu">
+                <li class="menu-items">
                     <a href="index.html">About Us</a>
                 </li>
-                <li>
+                <li class="menu-items">
                     <a href="#">Gallery</a>
                 </li>
-                <li>
+                <li class="menu-items">
                     <a href="#">Contact Us</a>
                 </li>
             </ul>
