--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header id="navbar">
         <a href="index.html">
-            <h1>Playdays Preschool</h1>
+            <h1 id="logo">Playdays Preschool</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li class="menu-items">
-                    <a href="index.html">About Us</a>
+                    <a href="index.html" class="active">About Us</a>
                 </li>
                 <li class="menu-items">
                     <a href="#">Gallery</a>
