--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main image
+    <section id="hero">
+        <img  id="hero-image"  src="/assets/images/hero-image.jpg" alt="Playschool-image">
+        <div id="cover-text">
+        <h2>Playdays Preschool</h2>
+        <br>
+        <h3>Professional childcare in your area</h3>
+        </div>
     </section>
     <section>
         services and amenities
