added letter spacing to logo and menu and added style to cover text

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section id="hero">
         <img  id="hero-image"  src="/assets/images/hero-image.jpg" alt="Playschool-image">
         <div id="cover-text">
-        <h2>Playdays Preschool</h2>
+        <h2><strong>Playdays Preschool</strong></h2>
         <br>
-        <h3>Professional childcare in your area</h3>
+        <h3><strong>Professional childcare in your area.</strong></h3>
         </div>
     </section>
     <section>
