Added structure for playdays services

--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
         <h3><strong>Professional childcare in your area.</strong></h3>
         </div>
     </section>
-    <section>
-        services and amenities
+    <section id="services-wrapper">
+        <div id="services">
+            <h3 id="services-title">Playdays Provides:</h3>
+            <ul id="services-list">
+                <li>An outside playground.</li>
+                <li>Healthy snacksfor all our children.</li>
+                <li>An inside hall for when it's raining.</li>
+                <li>Both morning and afternoon classes available</li>
+            </ul>
+        </div>
     </section>
     <section>
         school days and times
