added styles to clas times and added zoom animation to cover text

--- a/index.html
+++ b/index.html
@@ -49,8 +49,31 @@
             </ul>
         </div>
     </section>
-    <section>
-        school days and times
+    <section id="class-times">
+        <div>
+            <h2>Monday</h2>
+            <h3>09:00 - 12:00</h3>
+            <h3>12:00 - 15:00</h3>
+        </div>
+        <div>
+            <h2>Tuesday</h2>
+            <h3>09:00 - 12:00</h3>
+            <h3>12:00 - 15:00</h3>
+        </div>
+        <div>
+            <h2>Wednesday</h2>
+            <h3>09:00 - 12:00</h3>
+            <h3>12:00 - 15:00</h3>
+        </div>
+        <div>
+            <h2>Thursday</h2>
+            <h3>09:00 - 12:00</h3>
+            <h3>12:00 - 15:00</h3>
+        </div>
+        <div>
+            <h2>Friday</h2>
+            <h3>09:00 - 12:00</h3>
+        </div>
     </section>
 
     <footer>social media</footer>
