--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-        <ul>
+        <ul id="social">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
