--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li class="menu-items">
-                    <a href="#">Contact Us</a>
+                    <a href="contact-us.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
