--- a/contact-us.html
+++ b/contact-us.html
@@ -38,16 +38,16 @@
             <label for="cname">Child's Name:</label>
             <input type="text" name="childs_name" id="cname" class="text-input" required>
             <label for="email">Email Address</label>
-            <input type="email" name="email_address" id="email" class="text_input" required>
+            <input type="email" name="email_address" id="email" class="text-input" required>
             <label for="message">Message</label>
-            <input type="text" name="short_message" id="message" class="text_input">
+            <input type="text" name="short_message" id="message" class="text-input">
 
             <label for="morning">Morning</label>
-            <input type="radio" name="classes" id="morning" value="morning" required>
+            <input type="radio" name="classes" id="morning" value="morning" class="dit" required>
             <label for="afternoon">Afternoon</label>
-            <input type="radio" name="classes" id="afternoon" value="afternoon" required>
+            <input type="radio" name="classes" id="afternoon" value="afternoon" class="dit" required>
             <label for="both">Both</label>
-            <input type="radio" name="classes" id="both" value="both" required>
+            <input class="dit" type="radio" name="classes" id="both" value="both" class="dit" required>
 
             <input class="submit-button" type="submit" value="Submit">
         </form>
