updated all colours to hex format

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header id="navbar">
         <a href="index.html">
-            <h1 id="logo">Playdays Preschool</h1>
+            <img src="assets/images/logo-image.jpg" alt="logo">
         </a>
         <nav>
             <ul id="menu">
