--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,9 @@
    
     <section id="form-section">
         <form class="registration-form" action="https://formdump.codeinstitute.net/" method="post">
+
             <h2>Register interest for 2022!</h2>
+
             <label for="fname">Full Name:</label>
             <input type="text" name="full_name" id="fname" class="text-input" required>
             <label for="cname">Child's Name:</label>
@@ -40,7 +42,7 @@
             <label for="email">Email Address</label>
             <input type="email" name="email_address" id="email" class="text-input" required>
             <label for="message">Message</label>
-            <input type="text" name="short_message" id="message" class="text-input">
+            <input type="text-area" name="short_message" id="message" class="text-input">
 
             <label for="morning">Morning</label>
             <input type="radio" name="classes" id="morning" value="morning" class="dit" required>
