changed several id's to classes and made class times responsive to smaller sizes

--- a/gallery.html
+++ b/gallery.html
@@ -11,12 +11,12 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <header id="navbar">
+    <header class="navbar">
         <a href="index.html">
-            <h1 id="logo">Playdays Preschool</h1>
+            <h1 class="logo">Playdays Preschool</h1>
         </a>
         <nav>
-            <ul id="menu">
+            <ul class="menu">
                 <li class="menu-items">
                     <a href="index.html" >About Us</a>
                 </li>
@@ -30,7 +30,7 @@
         </nav>
     </header>
    
-    <section id="gallery">
+    <section class="gallery">
         <img src="assets/images/kids-painting.jpg" alt="Three children painting">
         <img src="assets/images/kids-playing.jpg" alt="Four children building with toy blocks">
         <img src="assets/images/kitchen-facilities.jpg" alt="A school kitchen">
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <ul id="social">
+        <ul class="social">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
