--- a/contact-us.html
+++ b/contact-us.html
@@ -11,12 +11,12 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <header id="navbar">
+    <header class="navbar">
         <a href="index.html">
-            <h1 id="logo">Playdays Preschool</h1>
+            <h1 class="logo">Playdays Preschool</h1>
         </a>
         <nav>
-            <ul id="menu">
+            <ul class="menu">
                 <li class="menu-items">
                     <a href="index.html" >About Us</a>
                 </li>
@@ -30,7 +30,7 @@
         </nav>
     </header>
    
-    <section id="form-section">
+    <section class="form-section">
         <form class="registration-form" action="https://formdump.codeinstitute.net/" method="post">
 
             <h2>Register interest for 2022!</h2>
@@ -56,7 +56,7 @@
     </section>
 
     <footer>
-        <ul id="social">
+        <ul class="social">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
