--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Playdays Preschool</title>
 </head>
 <body>
-    <header id="navbar">
+    <header class="navbar">
         <a href="index.html">
-            <img src="assets/images/logo-image.jpg" alt="logo">
+            <h1 class="logo">Playdays Preschool</h1>
         </a>
         <nav>
-            <ul id="menu">
+            <ul class="menu">
                 <li class="menu-items">
                     <a href="index.html" class="active">About Us</a>
                 </li>
@@ -29,19 +29,19 @@
             </ul>
         </nav>
     </header>
-    <section id="hero">
-        <img  id="hero-image"  src="/assets/images/hero-image.jpg" alt="Playschool-image">
-        <div id="cover-text">
+    <section class="hero">
+        <img  class="hero-image"  src="/assets/images/hero-image.jpg" alt="Playschool-image">
+        <div class="cover-text">
         <h2><strong>Playdays Preschool</strong></h2>
         <br>
         <h3><strong>Professional childcare in your area.</strong></h3>
         </div>
     </section>
-    <section id="services-wrapper">
-        <div id="services">
-            <h2 id="services-title">Playdays Provides:</h2>
+    <section class="services-wrapper">
+        <div class="services">
+            <h2 class="services-title">Playdays Provides:</h2>
             <br>
-            <ul id="services-list">
+            <ul class="services-list">
                 <li>An outside playground.</li>
                 <li>Healthy snacks for all our children.</li>
                 <li>An inside hall for when it's raining.</li>
@@ -49,7 +49,7 @@
             </ul>
         </div>
     </section>
-    <section id="class-times">
+    <section class="class-times">
         <div>
             <h2>Monday</h2>
             
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-        <ul id="social">
+        <ul class="social">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
