added styles to submit and radio buttons and changed font sizes to percentage format

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-page">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,8 @@
     </header>
    
     <section class="form-section">
-        <form class="registration-form" action="https://formdump.codeinstitute.net/" method="post">
+     <div class="registration">
+        <form class="registration-form" action="well-done.html" method="post">
 
             <h2>Register interest for 2022!</h2>
 
@@ -49,14 +50,15 @@
             <label for="afternoon">Afternoon</label>
             <input type="radio" name="classes" id="afternoon" value="afternoon" class="dit" required>
             <label for="both">Both</label>
-            <input class="dit" type="radio" name="classes" id="both" value="both" class="dit" required>
+            <input  type="radio" name="classes" id="both" value="both" class="dit" required>
 
             <input class="submit-button" type="submit" value="Submit">
+         </div>
         </form>
     </section>
 
     <footer>
-        <ul class="social">
+        <ul  class="social" >
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
