Made form responsive to mobile sizes and changed colours and background colours

--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
         <form class="registration-form" action="well-done.html" method="post">
 
             <h2>Register interest for 2022!</h2>
-
+        <div class="form-cover">
             <label for="fname">Full Name:</label>
             <input type="text" name="full_name" id="fname" class="text-input" required>
             <label for="cname">Child's Name:</label>
@@ -46,14 +46,14 @@
             <input type="text-area" name="short_message" id="message" class="text-input">
 
             <label for="morning">Morning</label>
-            <input type="radio" name="classes" id="morning" value="morning" class="dit" required>
+            <input type="radio" name="classes" id="morning" value="morning" class="class-time" required>
             <label for="afternoon">Afternoon</label>
-            <input type="radio" name="classes" id="afternoon" value="afternoon" class="dit" required>
+            <input type="radio" name="classes" id="afternoon" value="afternoon" class="class-time" required>
             <label for="both">Both</label>
-            <input  type="radio" name="classes" id="both" value="both" class="dit" required>
-
+            <input  type="radio" name="classes" id="both" value="both" class="class-time" required>
+        </div>
             <input class="submit-button" type="submit" value="Submit">
-         </div>
+         
         </form>
     </section>
 
