--- a/contact-us.html
+++ b/contact-us.html
@@ -35,6 +35,7 @@
         <form class="registration-form" action="well-done.html" method="post">
 
             <h2>Register interest for 2022!</h2>
+            <h2 class="phone-number">contact us: 021-1234567</h2>
         <div class="form-cover">
             <label for="fname">Full Name:</label>
             <input type="text" name="full_name" id="fname" class="text-input" required>
@@ -53,8 +54,9 @@
             <input  type="radio" name="classes" id="both" value="both" class="class-time" required>
         </div>
             <input class="submit-button" type="submit" value="Submit">
-         
+     </div>
         </form>
+        
     </section>
 
     <footer>
