added testing and bugs to readme

--- a/contact-us.html
+++ b/contact-us.html
@@ -29,10 +29,11 @@
             </ul>
         </nav>
     </header>
-   
-    <section class="form-section">
+
+<section class="form-section">
+    
      <div class="registration">
-        <form class="registration-form" action="well-done.html" method="post">
+        <form class="registration-form" action="well-done.html" method="get">
 
             <h2>Register interest for 2022!</h2>
             <h2 class="phone-number">contact us: 021-1234567</h2>
