--- a/well-done.html
+++ b/well-done.html
@@ -9,6 +9,10 @@
     <title>Well Done</title>
 </head>
 <body>
+<div class="well-done">
     <h1>Well Done</h1>
+    <br>
+    <h2><a href="index.html">Back to Playdays</a></h2>
+</div>
 </body>
 </html>
