added deployment and credits section

--- a/contact-us.html
+++ b/contact-us.html
@@ -45,7 +45,7 @@
             <label for="email">Email Address</label>
             <input type="email" name="email_address" id="email" class="text-input" required>
             <label for="message">Message</label>
-            <input type="text-area" name="short_message" id="message" class="text-input">
+            <input type="text" name="short_message" id="message" class="text-input">
 
             <label for="morning">Morning</label>
             <input type="radio" name="classes" id="morning" value="morning" class="class-time" required>
@@ -55,10 +55,9 @@
             <input  type="radio" name="classes" id="both" value="both" class="class-time" required>
         </div>
             <input class="submit-button" type="submit" value="Submit">
-     </div>
-        </form>
-        
-    </section>
+     </form>
+   </div>
+ </section>
 
     <footer>
         <ul  class="social" >
