--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
    
-    <section class="gallery">
+    <div class="gallery">
         <img src="assets/images/kids-painting.jpg" alt="Three children painting">
         <img src="assets/images/kids-playing.jpg" alt="Four children building with toy blocks">
         <img src="assets/images/kitchen-facilities.jpg" alt="A school kitchen">
@@ -39,7 +39,7 @@
         <img src="assets/images/school-hall.jpg" alt="A school hall with basketball hoop and stage">
         <img src="assets/images/school-tables.webp" alt="Kids tables and chairs aligned in a circle">
         <img src="assets/images/school-toys.jpg" alt="Kids table, chairs, toys and books">
-    </section>
+    </div>
 
     <footer>
         <ul class="social">
